{
  "version": 4,
  "terraform_version": "1.0.11",
  "serial": 3376,
  "lineage": "4194593c-9b00-d20a-36f5-700586c9ab2f",
  "resources": [
    {
      "module": "module.database",
      "mode": "managed",
      "type": "aws_instance",
      "name": "nextcloud_db",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0c3904e7363bbc4bc",
            "arn": "arn:aws:ec2:ap-northeast-3:594785396832:instance/i-0e08d6644c57007ac",
            "associate_public_ip_address": false,
            "availability_zone": "ap-northeast-3c",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0e08d6644c57007ac",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.medium",
            "ipv6_address_count": 0,
            "key_name": "dev-key",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "network_interface": [
              {
                "delete_on_termination": false,
                "device_index": 0,
                "network_interface_id": "eni-0cf940b41b4ac7149"
              },
              {
                "delete_on_termination": false,
                "device_index": 1,
                "network_interface_id": "eni-07bbe40d0a309533f"
              }
            ],
            "primary_network_interface_id": "eni-0cf940b41b4ac7149",
            "private_dns": "ip-10-0-4-243.ap-northeast-3.compute.internal",
            "private_ip": "10.0.4.243",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-088efc057bbeec141",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0c2e43eeace0ec045",
            "tags": {
              "Name": "nextcloud-db"
            },
            "tags_all": {
              "Name": "nextcloud-db"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0c4d501f94290f7ee"
            ]
          },
          "dependencies": [
            "module.database.aws_key_pair.generated_key",
            "module.database.data.template_cloudinit_config.mariadb_init",
            "module.database.tls_private_key.example",
            "module.networking.aws_eip.nat_eip",
            "module.networking.aws_eip.public_eip_nextcloud_app",
            "module.networking.aws_internet_gateway.gw",
            "module.networking.aws_nat_gateway.nextcloud_db_nat",
            "module.networking.aws_network_interface.private_eni_db_app",
            "module.networking.aws_network_interface.private_eni_nextcloud_app",
            "module.networking.aws_network_interface.private_eni_nextcloud_db_nat",
            "module.networking.aws_network_interface.public_eni_nextcloud_app",
            "module.networking.aws_route_table.nextcloud_app_public_rt",
            "module.networking.aws_route_table.nextcloud_db_route_table",
            "module.networking.aws_route_table_association.nextcloud_app_public_rt_assoc",
            "module.networking.aws_route_table_association.nextcloud_db_rt_assoc",
            "module.networking.aws_security_group.nextcloud_db_nat_sg",
            "module.networking.aws_security_group.nextcloud_private_db_app_sg",
            "module.networking.aws_security_group.nextcloud_public_app_sg",
            "module.networking.aws_subnet.nat_public_sn",
            "module.networking.aws_subnet.nextcloud_private_sn_app",
            "module.networking.aws_subnet.nextcloud_private_sn_db",
            "module.networking.aws_subnet.nextcloud_public_sn_app",
            "module.networking.aws_vpc.nextcloud_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat_eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0a5b3f4103bad454c",
            "domain": "vpc",
            "id": "eipalloc-0a5b3f4103bad454c",
            "network_border_group": "ap-northeast-3",
            "public_dns": "ec2-13-208-135-87.ap-northeast-3.compute.amazonaws.com",
            "public_ip": "13.208.135.87",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "NAT eip"
            },
            "tags_all": {
              "Name": "NAT eip"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_eip",
      "name": "public_eip_nextcloud_app",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-00e2dcd440d680576",
            "associate_with_private_ip": "10.0.1.5",
            "association_id": "eipassoc-0fddc41babf558614",
            "domain": "vpc",
            "id": "eipalloc-00e2dcd440d680576",
            "network_border_group": "ap-northeast-3",
            "network_interface": "eni-0527e9c905e338284",
            "private_dns": "ip-10-0-1-5.ap-northeast-3.compute.internal",
            "private_ip": "10.0.1.5",
            "public_dns": "ec2-15-152-83-222.ap-northeast-3.compute.amazonaws.com",
            "public_ip": "15.152.83.222",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "public_eip_nextcloud_app"
            },
            "tags_all": {
              "Name": "public_eip_nextcloud_app"
            },
            "vpc": true
          },
          "dependencies": [
            "module.networking.aws_internet_gateway.gw",
            "module.networking.aws_network_interface.public_eni_nextcloud_app",
            "module.networking.aws_security_group.nextcloud_public_app_sg",
            "module.networking.aws_subnet.nextcloud_public_sn_app",
            "module.networking.aws_vpc.nextcloud_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "gw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-3:594785396832:internet-gateway/igw-0642a5f1fb365fa87",
            "id": "igw-0642a5f1fb365fa87",
            "owner_id": "594785396832",
            "tags": {
              "Name": "nextcloud_gateway"
            },
            "tags_all": {
              "Name": "nextcloud_gateway"
            },
            "vpc_id": "vpc-0b63c149b9f09d399"
          },
          "dependencies": [
            "module.networking.aws_vpc.nextcloud_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nextcloud_db_nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0a5b3f4103bad454c",
            "connectivity_type": "public",
            "id": "nat-0546b04f15186ee4f",
            "network_interface_id": "eni-01fd206cbc56b025e",
            "private_ip": "10.0.1.103",
            "public_ip": "13.208.135.87",
            "subnet_id": "subnet-08cf1db4297937d95",
            "tags": {
              "Name": "Nextcloud DB NAT"
            },
            "tags_all": {
              "Name": "Nextcloud DB NAT"
            }
          },
          "dependencies": [
            "module.networking.aws_eip.nat_eip",
            "module.networking.aws_internet_gateway.gw",
            "module.networking.aws_subnet.nextcloud_public_sn_app",
            "module.networking.aws_vpc.nextcloud_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_network_interface",
      "name": "private_eni_db_app",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-3:594785396832:network-interface/eni-07bbe40d0a309533f",
            "id": "eni-07bbe40d0a309533f",
            "interface_type": "interface",
            "ipv4_prefix_count": 0,
            "ipv6_address_count": 0,
            "ipv6_prefix_count": 0,
            "mac_address": "0a:c5:5d:5f:73:0a",
            "owner_id": "594785396832",
            "private_dns_name": "ip-10-0-2-7.ap-northeast-3.compute.internal",
            "private_ip": "10.0.2.7",
            "private_ips": [
              "10.0.2.7"
            ],
            "private_ips_count": 0,
            "security_groups": [
              "sg-0f208e5ac7ee4fd48"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-017f7d2f3310871f8",
            "tags": {
              "Name": "private eni database to nextcloud app"
            },
            "tags_all": {
              "Name": "private eni database to nextcloud app"
            }
          },
          "dependencies": [
            "module.networking.aws_security_group.nextcloud_private_db_app_sg",
            "module.networking.aws_subnet.nextcloud_private_sn_app",
            "module.networking.aws_vpc.nextcloud_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_network_interface",
      "name": "private_eni_nextcloud_app",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-3:594785396832:network-interface/eni-0b13fa18ebe39b177",
            "id": "eni-0b13fa18ebe39b177",
            "interface_type": "interface",
            "ipv4_prefix_count": 0,
            "ipv6_address_count": 0,
            "ipv6_prefix_count": 0,
            "mac_address": "0a:47:a6:1f:e0:98",
            "owner_id": "594785396832",
            "private_dns_name": "ip-10-0-2-6.ap-northeast-3.compute.internal",
            "private_ip": "10.0.2.6",
            "private_ips": [
              "10.0.2.6"
            ],
            "private_ips_count": 0,
            "security_groups": [
              "sg-0f208e5ac7ee4fd48"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-017f7d2f3310871f8",
            "tags": {
              "Name": "private eni nextcloud app"
            },
            "tags_all": {
              "Name": "private eni nextcloud app"
            }
          },
          "dependencies": [
            "module.networking.aws_security_group.nextcloud_private_db_app_sg",
            "module.networking.aws_subnet.nextcloud_private_sn_app",
            "module.networking.aws_vpc.nextcloud_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_network_interface",
      "name": "private_eni_nextcloud_db_nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-3:594785396832:network-interface/eni-0cf940b41b4ac7149",
            "id": "eni-0cf940b41b4ac7149",
            "interface_type": "interface",
            "ipv4_prefix_count": 0,
            "ipv6_address_count": 0,
            "ipv6_prefix_count": 0,
            "mac_address": "0a:4f:0c:0c:57:16",
            "owner_id": "594785396832",
            "private_dns_name": "ip-10-0-4-243.ap-northeast-3.compute.internal",
            "private_ip": "10.0.4.243",
            "private_ips": [
              "10.0.4.243"
            ],
            "private_ips_count": 0,
            "security_groups": [
              "sg-0c4d501f94290f7ee"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0c2e43eeace0ec045",
            "tags": {
              "Name": "private eni nextcloud db nat"
            },
            "tags_all": {
              "Name": "private eni nextcloud db nat"
            }
          },
          "dependencies": [
            "module.networking.aws_security_group.nextcloud_db_nat_sg",
            "module.networking.aws_subnet.nextcloud_private_sn_db",
            "module.networking.aws_vpc.nextcloud_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_network_interface",
      "name": "public_eni_nextcloud_app",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-3:594785396832:network-interface/eni-0527e9c905e338284",
            "id": "eni-0527e9c905e338284",
            "interface_type": "interface",
            "ipv4_prefix_count": 0,
            "ipv6_address_count": 0,
            "ipv6_prefix_count": 0,
            "mac_address": "0a:19:ef:9e:ae:36",
            "owner_id": "594785396832",
            "private_dns_name": "ip-10-0-1-5.ap-northeast-3.compute.internal",
            "private_ip": "10.0.1.5",
            "private_ips": [
              "10.0.1.5"
            ],
            "private_ips_count": 0,
            "security_groups": [
              "sg-0e820d21e1ea4576d"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-08cf1db4297937d95",
            "tags": {
              "Name": "publuc eni nextcloud app"
            },
            "tags_all": {
              "Name": "publuc eni nextcloud app"
            }
          },
          "dependencies": [
            "module.networking.aws_security_group.nextcloud_public_app_sg",
            "module.networking.aws_subnet.nextcloud_public_sn_app",
            "module.networking.aws_vpc.nextcloud_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "nextcloud_app_public_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-3:594785396832:route-table/rtb-0fcf7dd06392b5999",
            "id": "rtb-0fcf7dd06392b5999",
            "owner_id": "594785396832",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0642a5f1fb365fa87",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "nextcloud_public_app_rt"
            },
            "tags_all": {
              "Name": "nextcloud_public_app_rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-0b63c149b9f09d399"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.networking.aws_internet_gateway.gw",
            "module.networking.aws_vpc.nextcloud_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "nextcloud_db_route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-3:594785396832:route-table/rtb-0215b6206b50d858c",
            "id": "rtb-0215b6206b50d858c",
            "owner_id": "594785396832",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0546b04f15186ee4f",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "nextcloud_db_route_table"
            },
            "tags_all": {
              "Name": "nextcloud_db_route_table"
            },
            "timeouts": null,
            "vpc_id": "vpc-0b63c149b9f09d399"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.networking.aws_eip.nat_eip",
            "module.networking.aws_internet_gateway.gw",
            "module.networking.aws_nat_gateway.nextcloud_db_nat",
            "module.networking.aws_subnet.nextcloud_public_sn_app",
            "module.networking.aws_vpc.nextcloud_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "nextcloud_app_public_rt_assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-07ae8ecd83c8921b8",
            "route_table_id": "rtb-0fcf7dd06392b5999",
            "subnet_id": "subnet-08cf1db4297937d95"
          },
          "dependencies": [
            "module.networking.aws_internet_gateway.gw",
            "module.networking.aws_route_table.nextcloud_app_public_rt",
            "module.networking.aws_subnet.nextcloud_public_sn_app",
            "module.networking.aws_vpc.nextcloud_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "nextcloud_db_rt_assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0368f0e1353213c98",
            "route_table_id": "rtb-0215b6206b50d858c",
            "subnet_id": "subnet-0c2e43eeace0ec045"
          },
          "dependencies": [
            "module.networking.aws_eip.nat_eip",
            "module.networking.aws_internet_gateway.gw",
            "module.networking.aws_nat_gateway.nextcloud_db_nat",
            "module.networking.aws_route_table.nextcloud_db_route_table",
            "module.networking.aws_subnet.nextcloud_private_sn_db",
            "module.networking.aws_subnet.nextcloud_public_sn_app",
            "module.networking.aws_vpc.nextcloud_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "nextcloud_db_nat_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-3:594785396832:security-group/sg-0c4d501f94290f7ee",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0c4d501f94290f7ee",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": -1,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "icmp",
                "security_groups": [],
                "self": false,
                "to_port": -1
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "terraform-20211123101315164600000001",
            "name_prefix": "terraform-",
            "owner_id": "594785396832",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "Nextcloud db nat sg"
            },
            "tags_all": {
              "Name": "Nextcloud db nat sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0b63c149b9f09d399"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.networking.aws_vpc.nextcloud_vpc"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "nextcloud_private_db_app_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-3:594785396832:security-group/sg-0f208e5ac7ee4fd48",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0f208e5ac7ee4fd48",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3306
              }
            ],
            "name": "nextcloud_private_db_app_sg",
            "name_prefix": "",
            "owner_id": "594785396832",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "Nextcloud private db app sg"
            },
            "tags_all": {
              "Name": "Nextcloud private db app sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0b63c149b9f09d399"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.networking.aws_vpc.nextcloud_vpc"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "nextcloud_public_app_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-3:594785396832:security-group/sg-0e820d21e1ea4576d",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0e820d21e1ea4576d",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3306
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "nextcloud_public_app_sg",
            "name_prefix": "",
            "owner_id": "594785396832",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "Nextcloud public app sg"
            },
            "tags_all": {
              "Name": "Nextcloud public app sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0b63c149b9f09d399"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.networking.aws_vpc.nextcloud_vpc"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "nat_public_sn",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-3:594785396832:subnet/subnet-0ca7248aa2ced4eb0",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-3c",
            "availability_zone_id": "apne3-az2",
            "cidr_block": "10.0.5.0/24",
            "id": "subnet-0ca7248aa2ced4eb0",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "594785396832",
            "tags": {
              "Name": "Nat gatway subnet public"
            },
            "tags_all": {
              "Name": "Nat gatway subnet public"
            },
            "vpc_id": "vpc-0b63c149b9f09d399"
          },
          "dependencies": [
            "module.networking.aws_vpc.nextcloud_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "nextcloud_private_sn_app",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-3:594785396832:subnet/subnet-017f7d2f3310871f8",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-3c",
            "availability_zone_id": "apne3-az2",
            "cidr_block": "10.0.2.0/24",
            "id": "subnet-017f7d2f3310871f8",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "594785396832",
            "tags": {
              "Name": "Nextcloud app private subnet"
            },
            "tags_all": {
              "Name": "Nextcloud app private subnet"
            },
            "vpc_id": "vpc-0b63c149b9f09d399"
          },
          "dependencies": [
            "module.networking.aws_vpc.nextcloud_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "nextcloud_private_sn_db",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-3:594785396832:subnet/subnet-0c2e43eeace0ec045",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-3c",
            "availability_zone_id": "apne3-az2",
            "cidr_block": "10.0.4.0/24",
            "id": "subnet-0c2e43eeace0ec045",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "594785396832",
            "tags": {
              "Name": "Nextcloud db private subnet"
            },
            "tags_all": {
              "Name": "Nextcloud db private subnet"
            },
            "vpc_id": "vpc-0b63c149b9f09d399"
          },
          "dependencies": [
            "module.networking.aws_vpc.nextcloud_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "nextcloud_public_sn_app",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-3:594785396832:subnet/subnet-08cf1db4297937d95",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-3c",
            "availability_zone_id": "apne3-az2",
            "cidr_block": "10.0.1.0/24",
            "id": "subnet-08cf1db4297937d95",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "594785396832",
            "tags": {
              "Name": "Nextcloud app public subnet"
            },
            "tags_all": {
              "Name": "Nextcloud app public subnet"
            },
            "vpc_id": "vpc-0b63c149b9f09d399"
          },
          "dependencies": [
            "module.networking.aws_vpc.nextcloud_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "nextcloud_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-3:594785396832:vpc/vpc-0b63c149b9f09d399",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0015795a9604eb501",
            "default_route_table_id": "rtb-0dbd76481c8ecaa22",
            "default_security_group_id": "sg-0a2867a4d6aa1e167",
            "dhcp_options_id": "dopt-a80643c1",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-0b63c149b9f09d399",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0dbd76481c8ecaa22",
            "owner_id": "594785396832",
            "tags": {
              "Name": "next_cloud_vpc"
            },
            "tags_all": {
              "Name": "next_cloud_vpc"
            }
          },
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.nextcloud",
      "mode": "managed",
      "type": "aws_instance",
      "name": "nextcloud_app",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0c3904e7363bbc4bc",
            "arn": "arn:aws:ec2:ap-northeast-3:594785396832:instance/i-09583fce4aff0b0e3",
            "associate_public_ip_address": true,
            "availability_zone": "ap-northeast-3c",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-09583fce4aff0b0e3",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.medium",
            "ipv6_address_count": 0,
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "network_interface": [
              {
                "delete_on_termination": false,
                "device_index": 0,
                "network_interface_id": "eni-0527e9c905e338284"
              },
              {
                "delete_on_termination": false,
                "device_index": 1,
                "network_interface_id": "eni-0b13fa18ebe39b177"
              }
            ],
            "primary_network_interface_id": "eni-0527e9c905e338284",
            "private_dns": "ip-10-0-1-5.ap-northeast-3.compute.internal",
            "private_ip": "10.0.1.5",
            "public_dns": "ec2-15-152-83-222.ap-northeast-3.compute.amazonaws.com",
            "public_ip": "15.152.83.222",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-037e02adea789237f",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-08cf1db4297937d95",
            "tags": {
              "Name": "nextcloud-app"
            },
            "tags_all": {
              "Name": "nextcloud-app"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0e820d21e1ea4576d"
            ]
          },
          "dependencies": [
            "module.database.aws_instance.nextcloud_db",
            "module.database.aws_key_pair.generated_key",
            "module.database.data.template_cloudinit_config.mariadb_init",
            "module.database.tls_private_key.example",
            "module.iam.aws_iam_access_key.nextcloud-s3-access_key",
            "module.iam.aws_iam_user.nextcloud-s3",
            "module.iam.data.aws_caller_identity.terraform_user",
            "module.networking.aws_eip.nat_eip",
            "module.networking.aws_eip.public_eip_nextcloud_app",
            "module.networking.aws_internet_gateway.gw",
            "module.networking.aws_nat_gateway.nextcloud_db_nat",
            "module.networking.aws_network_interface.private_eni_db_app",
            "module.networking.aws_network_interface.private_eni_nextcloud_app",
            "module.networking.aws_network_interface.private_eni_nextcloud_db_nat",
            "module.networking.aws_network_interface.public_eni_nextcloud_app",
            "module.networking.aws_route_table.nextcloud_app_public_rt",
            "module.networking.aws_route_table.nextcloud_db_route_table",
            "module.networking.aws_route_table_association.nextcloud_app_public_rt_assoc",
            "module.networking.aws_route_table_association.nextcloud_db_rt_assoc",
            "module.networking.aws_security_group.nextcloud_db_nat_sg",
            "module.networking.aws_security_group.nextcloud_private_db_app_sg",
            "module.networking.aws_security_group.nextcloud_public_app_sg",
            "module.networking.aws_subnet.nat_public_sn",
            "module.networking.aws_subnet.nextcloud_private_sn_app",
            "module.networking.aws_subnet.nextcloud_private_sn_db",
            "module.networking.aws_subnet.nextcloud_public_sn_app",
            "module.networking.aws_vpc.nextcloud_vpc",
            "module.nextcloud.data.template_cloudinit_config.cloudinit-nextcloud",
            "module.s3.aws_s3_bucket.nextcloud_s3_datastore",
            "module.s3.aws_s3_bucket_policy.nextcloud_s3_datastore_policy"
          ]
        }
      ]
    }
  ]
}